fix: refine controllerTest code for restDocs